force-app/main/default/objects/AccountContactRelation/fields/Account_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Full_Name__c</fullName>
    <complianceGroup>GDPR (General)</complianceGroup>
    <description>This field shows the Account Name in a formal way and is used in different flows to show the account name.</description>
    <formula>Account.Full_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Full Name</label>
    <type>Text</type>
</CustomField>