force-app/main/default/objects/AccountContactRelation/fields/Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name__c</fullName>
    <complianceGroup>GDPR (General)</complianceGroup>
    <description>This field shows the Account Name of the &apos;Contact&apos; (Person Account) in a formal way and is used in different flows to show the account name.</description>
    <formula>Contact.Account.Full_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>