force-app/main/default/objects/AccountContactRelation/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Identifier in external system</description>
    <externalId>true</externalId>
    <inlineHelpText>Identifier in external system</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>