force-app/main/default/objects/AccountContactRelation/fields/Role_2__c.field-meta.xml
<CustomField>
    <fullName>Role_2__c</fullName>
    <description>Different Account Contact Relationship roles that can exist between an Account and a Contact</description>
    <inlineHelpText>What Account Contact Relationship roles can exist between an Account and a Contact?</inlineHelpText>
    <label>Role Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPE</fullName>
                <label>Contactpersoon</label>
            </value>
            <value>
                <fullName>MDW</fullName>
                <label>Medewerker</label>
            </value>
            <value>
                <fullName>BEH</fullName>
                <isActive>false</isActive>
                <label>Beheerder</label>
            </value>
            <value>
                <fullName>BSL</fullName>
                <isActive>false</isActive>
                <label>Bestuurslid</label>
            </value>
            <value>
                <fullName>Bewindgevoerde</fullName>
                <isActive>false</isActive>
                <label>Bewindgevoerde</label>
            </value>
            <value>
                <fullName>EIG</fullName>
                <isActive>false</isActive>
                <label>MVE Eigenaar</label>
            </value>
            <value>
                <fullName>PEN</fullName>
                <isActive>false</isActive>
                <label>Penningmeester</label>
            </value>
            <value>
                <fullName>SEC</fullName>
                <isActive>false</isActive>
                <label>Secretaris</label>
            </value>
            <value>
                <fullName>VVL</fullName>
                <isActive>false</isActive>
                <label>VVE-lid</label>
            </value>
            <value>
                <fullName>VOO</fullName>
                <isActive>false</isActive>
                <label>Voorzitter</label>
            </value>
            <value>
                <fullName>Werkgever</fullName>
                <isActive>false</isActive>
                <label>Werkgever</label>
            </value>
            <value>
                <fullName>WOL</fullName>
                <isActive>false</isActive>
                <label>Wooncommissie lid</label>
            </value>
            <value>
                <fullName>COL</fullName>
                <isActive>false</isActive>
                <label>Wooncoöperatielid</label>
            </value>
            <value>
                <fullName>ccc</fullName>
                <isActive>false</isActive>
                <label>ccc</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>