force-app/main/default/objects/AccountContactRelation/fields/Type_of_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Contact_Person__c</fullName>
    <description>Deprecated.</description>
    <label>Type of Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>